--- a/home/private_dot_gitconfig.tmpl
+++ b/home/private_dot_gitconfig.tmpl
@@ -104,7 +104,7 @@
     sync = town sync
 
 [init]
-    templatedir = ~/.git_template
+    # templatedir = ~/.git_template
     defaultBranch = main
 
 [push]
