--- a/home/.chezmoiignore.tmpl
+++ b/home/.chezmoiignore.tmpl
@@ -1,23 +1,17 @@
-README.md
-Makefile
-install.sh
-*.deb
-*.rpm
-*.tar.gz
-.github/
-#.oh-my-zsh/cache
-#.oh-my-zsh/custom/themes/powerlevel10k/**/*.zwc
-Brewfile
+# oh-my-zsh
+.oh-my-zsh/cache/**
+
+# System files
+**/.DS_Store
+
 
 {{ if ne .chezmoi.os "darwin" }}
-# macos specific files to ignore on other platforms
 Library/Application Support
 .chezmoiscripts/darwin/**
 Brewfile
 {{ end }}
 
 {{ if ne .chezmoi.os "linux" }}
-# Linux specific files to ignore on other platforms
 .chezmoiscripts/linux/**
 .hushlogin
 .i3
