--- a/home/private_dot_gitconfig.tmpl
+++ b/home/private_dot_gitconfig.tmpl
@@ -33,6 +33,9 @@
     email = {{ .email }}
 
 
+[include]
+    path = ~/.config/delta/catppuccin.gitconfig
+
 [alias]
     # Because I constantly forget how to do this
     # https://git-scm.com/docs/git-fetch#git-fetch--p
@@ -165,6 +168,7 @@ followTags = true
 [delta]
   navigate = true
   side-by-side = true
+    features = catppuccin-mocha
 
 [git-town]
   contribution-regex = '^renovate/'
