fix: adds support to multiple flavors of linux

--- a/home/.chezmoiscripts/linux/run_onchange_linux-install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_linux-install-packages.sh.tmpl
@@ -3,7 +3,7 @@
 
 echo "Installing Packages: {{ .osid }}"
 
-
+{{- $packageManager := "" -}}
 {{ if (eq .osid "linux-debian" "linux-ubuntu" "linux-raspbian") -}}
 {{- $packageManager := "apt-get" }}
 {{- else if (eq .osid "linux-rocky" "linux-fedora" "linux-centos" "linux-redhat") -}}
