--- a/home/.chezmoi.yaml.tmpl
+++ b/home/.chezmoi.yaml.tmpl
@@ -1,14 +1,10 @@
 {{/* feature tags */}}
-{{- $headless := false -}}  {{/* true if this machine does not have a screen and keyboard */}}
-{{- $ephemeral := false -}} {{/* true if this machine is temporary, e.g. a cloud or VM instance */}}
-{{- $wsl := false -}}       {{/* true if running within Windows Subsystem for Linux (WSL) */}}
+{{- $headless := false -}}  {{/* true if this machine does not have a GUI interface. aka ssh */}}
+{{- $ephemeral := false -}} {{/* true if this machine is temporary, e.g. a cloud or VM instance  */}}
 {{- $work := false -}}      {{/* true if this machine should have work config */}}
 {{- $personal := false -}}  {{/* true if this machine should have personal secrets and config */}}
 {{- $shared := false -}}    {{/* true if this is a shared machine */}}
 {{- "" -}}
-
-{{- $chezmoiForce := or (has "--force" .chezmoi.args) (has "--force=true" .chezmoi.args) -}}
-{{- $interactive := and stdinIsATTY (not $chezmoiForce) -}}
 
 {{- $osID := .chezmoi.os -}}
 {{- if hasKey .chezmoi.osRelease "id" -}}
@@ -25,14 +21,6 @@
 {{- 	end -}}
 {{- end -}}
 
-
-{{/* Detect Windows Subsystem for Linux (WSL) */}}
-{{- if eq .chezmoi.os "linux" -}}
-{{-   if (.chezmoi.kernel.osrelease | lower | contains "microsoft") -}}
-{{-    $wsl = true -}}
-{{-   end -}}
-{{- end -}}
-
 {{/* detect GitHub codespaces, VSCode remote containers, Docker containers, Multipass VMs, and Vagrant boxes */}}
 {{- if or (env "CODESPACES") (env "REMOTE_CONTAINERS_IPC") (eq .chezmoi.username "root" "ubuntu" "vagrant" "vscode") -}}
 {{-   $ephemeral = true -}}
@@ -44,12 +32,7 @@
 
 {{/* On macOS the hostname can change depending on the network, this gives a more stable result */}}
 {{- if eq .chezmoi.os "darwin" -}}
-{{-   $computerName := output "scutil" "--get" "ComputerName" | trim -}}
-{{-   if eq $computerName "Copernicus" -}}
-{{-     $hostname = "copernicus" -}}
-{{-   else -}}
-{{-     $hostname = $computerName -}}
-{{-   end -}}
+{{-   $hostname := output "scutil" "--get" "ComputerName" | trim -}}
 {{- end -}}
 
 {{- if not $ephemeral -}}
@@ -60,7 +43,6 @@
 {{-   else if contains ".cmschill.net" $fqdn -}}
 {{-     $work = false -}}
 {{-     $personal = true -}}
-{{-     $shared = true -}}
 {{-   else if stdinIsATTY -}}
 {{-     $headless = promptBoolOnce . "headless" "headless" -}}
 {{-     $ephemeral = promptBoolOnce . "ephemeral" "ephemeral" -}}
@@ -75,9 +57,19 @@
 {{- $email := "" -}}
 {{- if $work -}}
 {{-   $email = "Mark.Schill@candescent.com" -}}
-{{- else -}}
+{{- end -}}
+{{- if $personal -}}
 {{-   $email = "Mark.Schill@cmschill.net" -}}
 {{- end -}}
+
+{{- if not $ephemeral -}}
+{{-   if $email | empty -}}
+{{-     if stdinIsATTY -}}
+{{-       $email = promptStringOnce . "email" "What is your email address?" -}}
+{{-     end -}}
+{{-   end -}}
+{{- end -}}
+
 
 scriptTempDir: "~/tmp"
 
@@ -104,6 +96,5 @@ data:
     personal: {{ $personal }}
     work: {{ $work }}
     osid: {{ $osID | quote }}
-    wsl: {{ $wsl }}
     shared: {{ $shared }}
     uname_arch: {{ $uname_arch }}
