--- a/home/.chezmoiscripts/linux/run_onchange_after_chsh.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_after_chsh.sh.tmpl
@@ -1,7 +1,7 @@
-{{- if (eq .chezmoi.os "linux") -}}
+{{- if (not .ephemeral) -}}
 #!/bin/bash
 
 set -eufo pipefail
 
-chsh -s /bin/zsh
+chsh -s /usr/bin/zsh
 {{ end -}}
