--- a/home/.chezmoiscripts/run_onchange_after_configure-apps.sh.tmpl
+++ b/home/.chezmoiscripts/run_onchange_after_configure-apps.sh.tmpl
@@ -1,5 +1,7 @@
 #!/usr/bin/env bash
 
+{{- if (not .ephemeral) -}}
+
 # GitHub CLI updates
 if command -v gh &>/dev/null; then
   extensions=(
@@ -13,3 +15,5 @@ if command -v gh &>/dev/null; then
     gh extension install "$ext"
   done
 fi
+
+{{ end -}}
