--- a/home/private_dot_gitconfig.tmpl
+++ b/home/private_dot_gitconfig.tmpl
@@ -2,15 +2,14 @@
 {{- $ghPath := lookPath "gh" }}
 {{- $opPath := lookPath "op" }}
 
-
+[include]
+  path = ~/.config/delta/catppuccin.gitconfig
 
 [core]
     autocrlf = input
     excludesFile = ~/.gitignore_global
     pager = delta
-{{- if eq .chezmoi.os "windows" }}
-	  sshCommand = C:/Windows/System32/OpenSSH/ssh.exe
-{{- end }}
+    editor = nvim
 
 [color]
     ui = auto
@@ -38,71 +37,67 @@
     name = Mark E. Schill
     email = {{ .email }}
 
-
-[include]
-    path = ~/.config/delta/catppuccin.gitconfig
-
 [alias]
-    # Because I constantly forget how to do this
-    # https://git-scm.com/docs/git-fetch#git-fetch--p
+# Because I constantly forget how to do this
+# https://git-scm.com/docs/git-fetch#git-fetch--p
     prune = fetch --prune
 
-    # Not quite as common as an amend, but still common
-    # https://git-scm.com/docs/git-reset#git-reset-emgitresetemltmodegtltcommitgt
+# Not quite as common as an amend, but still common
+# https://git-scm.com/docs/git-reset#git-reset-emgitresetemltmodegtltcommitgt
     undo = reset --soft HEAD^
 
-    # We wanna grab those pesky un-added files!
-    # https://git-scm.com/docs/git-stash
+# We wanna grab those pesky un-added files!
+# https://git-scm.com/docs/git-stash
     stash-all = stash save --include-untracked
 
-    # No need for a GUI - a nice, colorful, graphical representation
-    # https://git-scm.com/docs/git-log
-    # via https://medium.com/@payload.dd/thanks-for-the-git-st-i-will-use-this-4da5839a21a
+# No need for a GUI - a nice, colorful, graphical representation
+# https://git-scm.com/docs/git-log
+# via https://medium.com/@payload.dd/thanks-for-the-git-st-i-will-use-this-4da5839a21a
     glog = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
 
-    # A safer git push --force
+# A safer git push --force
     fpush = push --force-with-lease
 
-    # These are extremely nice
+# These are extremely nice
     ignore = "!f() { for arg in \"$@\"; do echo \"$arg\" >> .gitignore; done; git add .gitignore 2>/dev/null; }; f"
     exclude = "!f() { for arg in \"$@\"; do echo \"$arg\" >> \"$(git rev-parse --git-dir)/info/exclude\"; done; }; f"
-    # The incantation to list ignored files is terrible
-    # (but maybe I should use git status --ignored?)
+# The incantation to list ignored files is terrible
+# (but maybe I should use git status --ignored?)
     ignored = ls-files --others -i --exclude-standard
 
-    # When you git pull and want to see what you've just pulled in, do git new [branch] [git log options]
-    # inspired by https://git.wiki.kernel.org/index.php/Aliases
+# When you git pull and want to see what you've just pulled in, do git new [branch] [git log options]
+# inspired by https://git.wiki.kernel.org/index.php/Aliases
     new = "!f() { case \"$1\" in -*|\"\") b=;; *) b=$1; shift;; esac; git log $b@{1}..$b@{0} \"$@\"; }; f"
 
-    # show tag name of the last release tag on current branch
+# show tag name of the last release tag on current branch
     last-release = describe --tags --abbrev=0 --exclude=last*
     penultimate-release = !git describe --tags --abbrev=0 --exclude=last* --exclude=$(git last-release)
 
-    # show commits after the last release
+# show commits after the last release
     unreleased = !git shortlog $(git last-release)..
     unreleased-log = !git log $(git last-release)..
 
-    # show diff since the last release
+# show diff since the last release
     unreleased-diff = !git diff $(git last-release)
 
-    # git changelog-filename [name] -- get or set the filename of the changelog file (default: CHANGES.rst)
-    # used by other aliases such as 'git unreleased-changelog'
+# git changelog-filename [name] -- get or set the filename of the changelog file (default: CHANGES.rst)
+# used by other aliases such as 'git unreleased-changelog'
     changelog-filename = "!f() { git config alias.changelog.filename \"$@\" || echo CHANGES.rst; }; f"
 
-    # show changelog since the last release
+# show changelog since the last release
     unreleased-changelog = !git diff $(git last-release) -- $(git changelog-filename)
 
-    # git amend [-a|-p|FILE] to just add something to the last commit
-    # (lately I've mostly been using git add [-p]; git show --staged; git amend)
+# git amend [-a|-p|FILE] to just add something to the last commit
+# (lately I've mostly been using git add [-p]; git show --staged; git amend)
     amend = commit --amend --no-edit
 
-    # Clean
+# Clean
     clear = clean -d -x -i
 
-    # git reword -- edit the last commit message
+# git reword -- edit the last commit message
     reword = commit --amend --only -v
 
-    # git-town aliases
+# git-town aliases
     compress = town compress
     diff-parent = town diff-parent
     hack = town hack
@@ -143,11 +138,6 @@ followTags = true
     ff = only
     rebase = true
 
-[diff]
-  colorMoved=default
-
-[difftool "bc"]
-
 [interactive]
     diffFilter = delta --color-only
 
@@ -187,14 +177,20 @@ followTags = true
   {{- end }}
 {{- end }}
 
-{{ if eq .chezmoi.os "darwin" -}}
+################################################################################
+# Diff and Merge Tools
+################################################################################
 
+[diff]
+  tool = nvimdiff
+
+{{- if lookPath "ksdiff" }}
 [difftool "Kaleidoscope"]
 	cmd = ksdiff --partial-changeset --relative-path \"$MERGED\" -- \"$LOCAL\" \"$REMOTE\"
 
 [mergetool "Kaleidoscope"]
 	cmd = ksdiff --merge --output \"$MERGED\" --base \"$BASE\" -- \"$LOCAL\" --snapshot \"$REMOTE\" --snapshot
 	trustExitCode = true
+{{- end }}
 
-{{- end -}}
-
+################################################################################
