--- a/home/dot_ssh/private_config.tmpl
+++ b/home/dot_ssh/private_config.tmpl
@@ -34,4 +34,4 @@ Host emu-migration-workstation
 	UserKnownHostsFile ~/.ssh/google_compute_known_hosts
 	ProxyCommand ~/.config/gcloud/virtenv/bin/python3 /opt/homebrew/Caskroom/gcloud-cli/latest/google-cloud-sdk/lib/gcloud.py compute start-iap-tunnel 'emu-migration-workstation' '%p' --listen-on-stdin --project dbk-iaas-tools --zone=us-west2-c --verbosity=warning
 	ProxyUseFdpass no
-	User ms185570_ncr_com
+	User ext_ms185570_ncr_com
