Update .config/gh-dash/config.yml Update .gitconfig

--- a/home/private_dot_gitconfig.tmpl
+++ b/home/private_dot_gitconfig.tmpl
@@ -174,9 +174,9 @@ followTags = true
   # preventing redundancy and potential authentication conflicts.
   helper = ""
 [credential "https://github.com"]
-  helper = !{{ $ghPath}} auth git-credential
+  helper = !op plugin run -- gh auth git-credential
 [credential "https://gist.github.com"]
-  helper = !{{ $ghPath}} auth git-credential
+  helper = !op plugin run -- gh auth git-credential
   {{- else }}
 [credential]
   helper = osxkeychain
