--- a/home/private_dot_gitconfig.tmpl
+++ b/home/private_dot_gitconfig.tmpl
@@ -98,6 +98,7 @@
     reword = commit --amend --only -v
 
 # git-town aliases
+    append = town append
     compress = town compress
     diff-parent = town diff-parent
     hack = town hack
