--- a/home/dot_p10k.zsh.tmpl
+++ b/home/dot_p10k.zsh.tmpl
@@ -728,7 +728,7 @@
   typeset -g POWERLEVEL9K_RANGER_FOREGROUND=178
   # Custom icon.
   # typeset -g POWERLEVEL9K_RANGER_VISUAL_IDENTIFIER_EXPANSION='⭐'
-  
+
   ####################[ yazi: yazi shell (https://github.com/sxyazi/yazi) ]#####################
   # Yazi shell color.
   typeset -g POWERLEVEL9K_YAZI_FOREGROUND=178
@@ -1719,4 +1719,8 @@ typeset -g POWERLEVEL9K_CONFIG_FILE=${${(%):-%x}:a}
 (( ${#p10k_config_opts} )) && setopt ${p10k_config_opts[@]}
 'builtin' 'unset' 'p10k_config_opts'
 
+{{ if eq .appearance  "light" -}}
+source ~/.config/zsh/catppuccin-latte.zsh
+{{- else -}}
 source ~/.config/zsh/catppuccin-mocha.zsh
+{{- end }}
