Update .config/nvim/lua/plugins/colorscheme.lua Update .gitconfig

--- a/home/dot_config/nvim/lua/plugins/colorscheme.lua.tmpl
+++ b/home/dot_config/nvim/lua/plugins/colorscheme.lua.tmpl
@@ -3,10 +3,10 @@ return {
     "catppuccin/nvim",
     opts = function(_, opts)
       -- Required until https://github.com/LazyVim/LazyVim/pull/6354 is merged.
-      local module = require("catppuccin.groups.integrations.bufferline")
-      if module then
-        module.get = module.get_theme
-      end
+      -- local module = require("catppuccin.groups.integrations.bufferline")
+      -- if module then
+      --   module.get = module.get_theme
+      -- end
       return opts
     end,
   },
