--- a/home/private_dot_gitconfig.tmpl
+++ b/home/private_dot_gitconfig.tmpl
@@ -189,6 +189,14 @@ followTags = true
 {{- end }}
 
 ################################################################################
+# Git Town
+################################################################################
+[git-town]
+  github-connector = gh
+  main-branch = dev
+  perennial-branches = pte qal pte stg prd nonprod prod
+
+################################################################################
 # Diff and Merge Tools
 ################################################################################
 
