--- a/home/dot_zshrc.tmpl
+++ b/home/dot_zshrc.tmpl
@@ -36,6 +36,8 @@ fi
 # time that oh-my-zsh is loaded.
 ZSH_THEME="powerlevel10k/powerlevel10k"
 
+# Enable vim key bindings
+bindkey -v
 
 # Set default user for prompt
 DEFAULT_USER=`whoami`
