--- a/home/dot_config/wezterm/config/appearance.lua.tmpl
+++ b/home/dot_config/wezterm/config/appearance.lua.tmpl
@@ -16,6 +16,13 @@ return function(config, wezterm)
   config.macos_window_background_blur = 30
   config.window_background_opacity = 0.9
 
+  config.window_padding = {
+    left = 3,
+    right = 3,
+    top = 0,
+    bottom = 3,
+  }
+
   -- Miscellaneous settings
   config.max_fps = 120
   config.prefer_egl = true
