Update .chezmoidata/packages.yaml Add .config/yazi/flavors/catppuccin-mocha.yazi/LICENSE Add .config/yazi/flavors/catppuccin-mocha.yazi/LICENSE-tmtheme Add .config/yazi/flavors/catppuccin-mocha.yazi/README.md Add .config/yazi/flavors/catppuccin-mocha.yazi/flavor.toml Add .config/yazi/flavors/catppuccin-mocha.yazi/preview.png Add .config/yazi/flavors/catppuccin-mocha.yazi/tmtheme.xml Add .config/yazi/keymap.toml Add .config/yazi/theme.toml Add .config/yazi/yazi.toml Update .zshrc

--- a/home/dot_zshrc.tmpl
+++ b/home/dot_zshrc.tmpl
@@ -472,6 +472,16 @@ source ~/.zsh/catppuccin_latte-zsh-syntax-highlighting.zsh
 source ~/.zsh/catppuccin_mocha-zsh-syntax-highlighting.zsh
 {{- end }}
 
+# ################################################################################
+# Yazi
+# ################################################################################
+function y() {
+	local tmp="$(mktemp -t "yazi-cwd.XXXXXX")" cwd
+	yazi "$@" --cwd-file="$tmp"
+	IFS= read -r -d '' cwd < "$tmp"
+	[ -n "$cwd" ] && [ "$cwd" != "$PWD" ] && builtin cd -- "$cwd"
+	/bin/rm -f -- "$tmp"
+}
 
 source ~/.config/op/plugins.sh
 source ~/.zshrc_local
