--- a/home/.chezmoiscripts/linux/run_onchange_before_install-op.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-op.sh.tmpl
@@ -1,25 +1,6 @@
 #!/bin/sh
 
-{{ if and (eq .osid "linux-debian" "linux-ubuntu") (not .ephemeral) -}}
-
-curl -sS https://downloads.1password.com/linux/keys/1password.asc |
-  sudo gpg --dearmor --output /usr/share/keyrings/1password-archive-keyring.gpg
-
-echo 'deb [arch=amd64 signed-by=/usr/share/keyrings/1password-archive-keyring.gpg] https://downloads.1password.com/linux/debian/amd64 stable main' |
-  sudo tee /etc/apt/sources.list.d/1password.list
-
-sudo mkdir -p /etc/debsig/policies/AC2D62742012EA22/
-curl -sS https://downloads.1password.com/linux/debian/debsig/1password.pol |
-  sudo tee /etc/debsig/policies/AC2D62742012EA22/1password.pol
-sudo mkdir -p /usr/share/debsig/keyrings/AC2D62742012EA22
-curl -sS https://downloads.1password.com/linux/keys/1password.asc |
-  sudo gpg --dearmor --output /usr/share/debsig/keyrings/AC2D62742012EA22/debsig.gpg
-
-sudo apt update && sudo apt install 1password
-
-{{ end -}}
-
-{{ if and (eq .osid "linux-fedora") (eq .uname_arch "arm64") (not .ephemeral) -}}
+{{ if and (eq .uname_arch "arm64") (not .ephemeral) -}}
 cd /tmp
 
 curl -sSO https://downloads.1password.com/linux/tar/stable/aarch64/1password-latest.tar.gz
