--- a/home/.chezmoi.yaml.tmpl
+++ b/home/.chezmoi.yaml.tmpl
@@ -1,4 +1,6 @@
-{{/* feature tags */}}
+{{/* ###########################################################################
+Feature Tags
+########################################################################### */}}
 {{- $headless := false -}}  {{/* true if this machine does not have a GUI interface. aka ssh */}}
 {{- $ephemeral := false -}} {{/* true if this machine is temporary, e.g. a cloud or VM instance  */}}
 {{- $work := false -}}      {{/* true if this machine should have work config */}}
@@ -6,6 +8,9 @@
 {{- $shared := false -}}    {{/* true if this is a shared machine */}}
 {{- "" -}}
 
+{{/* ###########################################################################
+Operating System Identification
+########################################################################### */}}
 {{- $osID := .chezmoi.os -}}
 {{- if hasKey .chezmoi.osRelease "id" -}}
 {{-   $osID = printf "%s-%s" .chezmoi.os .chezmoi.osRelease.id -}}
@@ -14,11 +19,11 @@
 {{/* Override some arch designations */}}
 {{- $uname_arch := "" -}}
 {{- if eq .chezmoi.os "linux" -}}
-{{- 	if eq (output "uname" "-m" | trim) "aarch64" -}}
-{{- 		$uname_arch = "arm64" -}}
-{{- 	else -}}
-{{-			$uname_arch = output "uname" "-m" | trim -}}
-{{- 	end -}}
+{{-   if eq (output "uname" "-m" | trim) "aarch64" -}}
+{{-     $uname_arch = "arm64" -}}
+{{-   else -}}
+{{-     $uname_arch = output "uname" "-m" | trim -}}
+{{-   end -}}
 {{- end -}}
 
 {{/* detect GitHub codespaces, VSCode remote containers, Docker containers, Multipass VMs, and Vagrant boxes */}}
@@ -52,6 +57,19 @@
 {{-   end -}}
 {{- end -}}
 
+{{/* ###########################################################################
+Sets the appearance of the desktop environment.
+########################################################################### */}}
+{{- $appearance := "Dark" }}
+{{- if eq .chezmoi.os "darwin" -}}
+{{/*  In light mode this command errors out in macOS */}}
+{{-   if exec "defaults" "read" "-g" "AppleInterfaceStyle" "2>/dev/null" -}}
+{{-     $appearance = "dark" -}}
+{{-   else -}}
+{{-     $appearance = "light" -}}
+{{-   end -}}
+{{- end -}}
+
 
 {{- $name := "Mark E. Schill" -}}
 {{- $email := "" -}}
@@ -70,6 +88,9 @@
 {{-   end -}}
 {{- end -}}
 
+################################################################################
+# Chezmoi configuration file
+################################################################################
 
 scriptTempDir: "~/tmp"
 
@@ -98,4 +119,4 @@ data:
     osid: {{ $osID | quote }}
     shared: {{ $shared }}
     uname_arch: {{ $uname_arch }}
-    appearance: dark
+    appearance: {{ $appearance | quote }}
