--- a/home/dot_config/tmux/tmux.conf.tmpl
+++ b/home/dot_config/tmux/tmux.conf.tmpl
@@ -166,6 +166,7 @@ set -g @plugin 'thewtex/tmux-mem-cpu-load'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # Run automatically
 if "test ! -d ~/.tmux/plugins/tpm" \
