--- a/home/dot_config/wezterm/config/appearance.lua.tmpl
+++ b/home/dot_config/wezterm/config/appearance.lua.tmpl
@@ -7,7 +7,8 @@ return function(config, wezterm)
   {{- else -}}
   config.color_scheme = "Catppuccin Mocha"
   {{- end }}
-  -- config.hide_tab_bar_if_only_one_tab = true
+
+  config.hide_tab_bar_if_only_one_tab = true
   config.window_decorations = "RESIZE" -- "TITLE | RESIZE" is the default
   config.window_frame = {
     font = wezterm.font({ family = 'Berkeley Mono', weight = 'Bold' }),
