--- a/home/dot_config/wezterm/config/appearance.lua.tmpl
+++ b/home/dot_config/wezterm/config/appearance.lua.tmpl
@@ -8,6 +8,9 @@ return function(config, wezterm)
   config.color_scheme = "Catppuccin Mocha"
   {{- end }}
 
+  local bg_background = os.getenv("HOME") .. "/.config/wezterm/assets/Wezterm Background Blurred.png"
+  config.window_background_image = bg_background
+
   config.hide_tab_bar_if_only_one_tab = true
   config.window_decorations = "RESIZE" -- "TITLE | RESIZE" is the default
   config.window_frame = {
@@ -32,30 +35,150 @@ return function(config, wezterm)
   config.command_palette_bg_color = "#1e1e2e"
   config.command_palette_fg_color = "#cdd6f4"
 
-  wezterm.on('update-status', function(window)
-  -- Grab the utf8 character for the "powerline" left facing
-  -- solid arrow.
-  local SOLID_LEFT_ARROW = utf8.char(0xe0b2)
+  ------------------------------------------------------------
+  -- leader active indicator prefix
+  local leader_prefix = utf8.char(0x1f30a) -- ocean wave
 
-  -- Grab the current window's configuration, and from it the
-  -- palette (this is the combination of your chosen colour scheme
-  -- including any overrides).
-  local color_scheme = window:effective_config().resolved_palette
-  local bg = color_scheme.background
-  local fg = color_scheme.foreground
+   local scheme_colors = {
+    catppuccin = {
+        mocha = {
+          rosewater = "#f5e0dc",
+          flamingo = "#f2cdcd",
+          pink = "#f5c2e7",
+          mauve = "#cba6f7",
+          red = "#f38ba8",
+          maroon = "#eba0ac",
+          peach = "#fab387",
+          yellow = "#f9e2af",
+          green = "#a6e3a1",
+          teal = "#94e2d5",
+          sky = "#89dceb",
+          sapphire = "#74c7ec",
+          blue = "#89b4fa",
+          lavender = "#b4befe",
+          text = "#cdd6f4",
+          crust = "#11111b",
+        }
+    }
+  }
 
-  window:set_right_status(wezterm.format({
-    -- First, we draw the arrow...
-    { Background = { Color = 'none' } },
-    { Foreground = { Color = bg } },
-    { Text = SOLID_LEFT_ARROW },
-    -- Then we draw our text
-    { Background = { Color = bg } },
-    { Foreground = { Color = fg } },
-    { Text = ' ' .. wezterm.hostname() .. ' ' },
-  }))
+  local colors = {
+    border = scheme_colors.catppuccin.mocha.lavender,
+    tab_bar_active_tab_fg = scheme_colors.catppuccin.mocha.mauve,
+    tab_bar_active_tab_bg = scheme_colors.catppuccin.mocha.crust,
+    tab_bar_text = scheme_colors.catppuccin.mocha.crust,
+    arrow_foreground_leader = scheme_colors.catppuccin.mocha.lavender,
+    arrow_background_leader = scheme_colors.catppuccin.mocha.crust,
+  }
+
+  config.window_frame = {
+    border_left_width = "0.4cell",
+    border_right_width = "0.4cell",
+    border_bottom_height = "0.15cell",
+    border_top_height = "0.15cell",
+    border_left_color = colors.border,
+    border_right_color = colors.border,
+    border_bottom_color = colors.border,
+    border_top_color = colors.border,
+  }
+
+  -- tab bar
+  config.hide_tab_bar_if_only_one_tab = false
+  config.tab_bar_at_bottom = true
+  config.use_fancy_tab_bar = false
+  config.tab_and_split_indices_are_zero_based = true
+
+   local function tab_title(tab_info)
+    local title = tab_info.tab_title
+    -- if the tab title is explicitly set, take that
+    if title and #title > 0 then
+        return title
+    end
+    -- Otherwise, use the title from the active pane
+    -- in that tab
+    return tab_info.active_pane.title
+  end
+
+
+wezterm.on(
+    "format-tab-title",
+    function(tab, tabs, panes, config, hover, max_width)
+        local title = " " .. tab.tab_index .. ": " .. tab_title(tab) .. " "
+        local left_edge_text = ""
+        local right_edge_text = ""
+
+        if tab_style == "rounded" then
+            title = tab.tab_index .. ": " .. tab_title(tab)
+            title = wezterm.truncate_right(title, max_width - 2)
+            left_edge_text = wezterm.nerdfonts.ple_left_half_circle_thick
+            right_edge_text = wezterm.nerdfonts.ple_right_half_circle_thick
+        end
+
+        -- ensure that the titles fit in the available space,
+        -- and that we have room for the edges.
+        -- title = wezterm.truncate_right(title, max_width - 2)
+
+        if tab.is_active then
+            return {
+                { Background = { Color = colors.tab_bar_active_tab_bg } },
+                { Foreground = { Color = colors.tab_bar_active_tab_fg } },
+                { Text = left_edge_text },
+                { Background = { Color = colors.tab_bar_active_tab_fg } },
+                { Foreground = { Color = colors.tab_bar_text } },
+                { Text = title },
+                { Background = { Color = colors.tab_bar_active_tab_bg } },
+                { Foreground = { Color = colors.tab_bar_active_tab_fg } },
+                { Text = right_edge_text },
+            }
+        end
+    end
+)
+--[[
+============================
+Leader Active Indicator
+============================
+]] --
+
+wezterm.on("update-status", function(window, _)
+    -- leader inactive
+    local solid_left_arrow = ""
+    local arrow_foreground = { Foreground = { Color = colors.arrow_foreground_leader } }
+    local arrow_background = { Background = { Color = colors.arrow_background_leader } }
+    local prefix = ""
+
+    -- leaader is active
+    if window:leader_is_active() then
+        prefix = " " .. leader_prefix
+
+        if tab_style == "rounded" then
+            solid_left_arrow = wezterm.nerdfonts.ple_right_half_circle_thick
+        else
+            solid_left_arrow = wezterm.nerdfonts.pl_left_hard_divider
+        end
+
+        local tabs = window:mux_window():tabs_with_info()
+
+        if tab_style ~= "rounded" then
+            for _, tab_info in ipairs(tabs) do
+                if tab_info.is_active and tab_info.index == 0 then
+                    arrow_background = { Foreground = { Color = colors.tab_bar_active_tab_fg } }
+                    solid_left_arrow = wezterm.nerdfonts.pl_right_hard_divider
+                    break
+                end
+            end
+        end
+    end
+
+
+    window:set_left_status(wezterm.format {
+        { Background = { Color = colors.arrow_foreground_leader } },
+        { Text = prefix },
+        arrow_foreground,
+        arrow_background,
+        { Text = solid_left_arrow }
+    })
 end)
-
+  ------------------------------------------------------------
   wezterm.on("augment-command-palette", function(window)
     return {
       {
