Update .chezmoidata/packages.yaml Update Library/Application Support/Cursor/User/settings.json Update .gitconfig

--- a/home/private_dot_gitconfig.tmpl
+++ b/home/private_dot_gitconfig.tmpl
@@ -178,9 +178,11 @@ followTags = true
   # preventing redundancy and potential authentication conflicts.
   helper = ""
 [credential "https://github.com"]
-  helper = !op plugin run -- gh auth git-credential
+  helper =
+  helper = !/opt/homebrew/bin/gh auth git-credential
 [credential "https://gist.github.com"]
-  helper = !op plugin run -- gh auth git-credential
+  helper =
+  helper = !/opt/homebrew/bin/gh auth git-credential
   {{- else }}
 [credential]
   helper = osxkeychain
